tests/baselines/reference/AnnotationDeclarationNegative6.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative6.ets(2,5): error TS28018: Unexpected token. An annotation property was expected.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative6.ets(2,12): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative6.ets(2,12): error TS28018: Unexpected token. An annotation property was expected.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative6.ets(2,16): error TS1005: ';' expected.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative6.ets(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative6.ets (5 errors) ====
    @interface Anno {
        public a() {}
        ~~~~~~
!!! error TS28018: Unexpected token. An annotation property was expected.
               ~
!!! error TS2304: Cannot find name 'a'.
               ~
!!! error TS28018: Unexpected token. An annotation property was expected.
                   ~
!!! error TS1005: ';' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.